vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.36.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vaultwarden-pvc
              mountPath: /data
      volumes:
        - name: vaultwarden-pvc
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
