vaultwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  ports:
    - name: vaultwarden-http
      port: 80
      targetPort: 80
  selector:
    app: vaultwarden
  type: LoadBalancer
