vaultwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`password.cngei.it`)
      services:
        - kind: Service
          name: vaultwarden
          port: 80
  tls:
    secretName: vaultwarden-tls
